Conditionally register invocation plugins that require deoptimization so that VM can decide to be deoptimization-free